# ReID-Inference

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tmp.ipynb
src/reid/: README.md  __init__.py  array_types.py  backends.py  encoder.py  external_paths.py  names.py  parameters.py  protocol.py
src/reid/cli/: __init__.py  feature_extract.py  feature_parsers.py
src/reid/model/: __init__.py  fastreid.py  solider.py  torchreid.py
src/reid/model/fastreid/: README.md  __init__.py  model.py  preprocess.py
src/reid/model/solider/: model.py
src/reid/model/torchreid/: README.md  __init__.py  model.py  parameter.py  preprocess.py
src/reid/model/transreid/: README.md  __init__.py  model.py  parameter.py  preprocess.py
