[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reid-inference"
version = "0.1.0"
authors = [{ name = "Ryuto Yoshida" }]
description = "Person re-identification inference helpers and backend wrappers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "torch",
    "torchvision",
    "tensorboard",
    "opencv-contrib-python",
    "pillow",
    "scipy",
    "gdown",
    "yacs",
    "termcolor",
    "torch_modules @ git+https://github.com/ry-yoshida-dev/TorchModules.git",
    "deep-person-reid @ git+https://github.com/ry-yoshida-dev/deep-person-reid.git",
    "fast-reid @ git+https://github.com/ry-yoshida-dev/fast-reid.git",
    "transreid-ssl @ git+https://github.com/ry-yoshida-dev/TransReID-SSL.git",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-dev/ReID-Inference"
"Bug Tracker" = "https://github.com/ry-yoshida-dev/ReID-Inference/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reid = ["py.typed"]
